--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+ <head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Hallsta Fordon</title>
-  </head>
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Hallsta Fordon – köp, sälj och serva din bil i Hallstahammar. Vi erbjuder bilförsäljning, bilverkstad och bilservice för både nya och begagnade bilar." />
+  <meta name="keywords" content="köpa bil, sälja bil, begagnade bilar, bilverkstad Hallstahammar, bilservice Hallstahammar, bilförsäljning, bilfirma Hallstahammar, värdera bil, bilar till salu, ny bil Hallstahammar, bilreparation, byte av bil, bilmekaniker Hallstahammar, köpa begagnad bil, bilgaranti, bilförmedling, test av bil innan köp, leasing av bil, snabb bilförsäljning, säkra bilköp" />
+  <meta name="author" content="Hallsta Fordon" />
+
+  <!-- Apple / PWA -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>Hallsta Fordon – Bilförsäljning & Service i Hallstahammar</title>
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
