--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="theme-color" content="#000000" />
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Hallsta Fordon – köp, sälj och serva din bil i Hallstahammar. Vi erbjuder bilförsäljning, bilverkstad och bilservice för både nya och begagnade bilar." />
-  <meta name="keywords" content="köpa bil, sälja bil, begagnade bilar, bilverkstad Hallstahammar, bilservice Hallstahammar, bilförsäljning, bilfirma Hallstahammar, värdera bil, bilar till salu, ny bil Hallstahammar, bilreparation, byte av bil, bilmekaniker Hallstahammar, köpa begagnad bil, bilgaranti, bilförmedling, test av bil innan köp, leasing av bil, snabb bilförsäljning, säkra bilköp" />
+  <meta name="description" content="Hallsta Fordon – köp, sälj och serva din bil i Hallstahammar. Vi erbjuder bilförsäljning för både nya och begagnade bilar." />
+  <meta name="keywords" content="köpa bil, sälja bil, begagnade bilar, Hallstahammar, bilförsäljning, bilfirma Hallstahammar, värdera bil, bilar till salu, ny bil Hallstahammar, bilreparation, byte av bil, bilmekaniker Hallstahammar, köpa begagnad bil, bilgaranti, bilförmedling, test av bil innan köp, leasing av bil, snabb bilförsäljning, säkra bilköp" />
   <meta name="author" content="Hallsta Fordon" />
 
   <!-- Apple / PWA -->
