--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
  <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/logo1.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 
   <!-- SEO Meta Tags -->
   <meta name="description" content="Hallsta Fordon – köp, sälj och serva din bil i Hallstahammar. Vi erbjuder bilförsäljning för både nya och begagnade bilar." />
-  <meta name="keywords" content="köpa bil, sälja bil, begagnade bilar, Hallstahammar, bilförsäljning, bilfirma Hallstahammar, värdera bil, bilar till salu, ny bil Hallstahammar, bilreparation, byte av bil, bilmekaniker Hallstahammar, köpa begagnad bil, bilgaranti, bilförmedling, test av bil innan köp, leasing av bil, snabb bilförsäljning, säkra bilköp" />
+  <meta name="keywords" content="köpa bil, sälja bil, begagnade bilar, Hallstahammar, bilförsäljning, bilfirma Hallstahammar, värdera bil, bilar till salu, ny bil Hallstahammar, byte av bil, Hallstahammar, köpa begagnad bil, bilgaranti, bilförmedling, test av bil innan köp, leasing av bil, snabb bilförsäljning, säkra bilköp" />
   <meta name="author" content="Hallsta Fordon" />
 
   <!-- Apple / PWA -->
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Hallsta Fordon – Bilförsäljning & Service i Hallstahammar</title>
@@ -20,15 +20,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
